--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -105,3 +105,5 @@ entries:
     replaces: eclipse-che.v7.97.0
   - name: eclipse-che.v7.99.0
     replaces: eclipse-che.v7.98.0
+  - name: eclipse-che.v7.100.0
+    replaces: eclipse-che.v7.99.0
